[package]
name = "set-with-grab"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "The macro to set state with error handling in bevy."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
set-with-grab-macro = { path = "./set-with-grab-macro", version = "1.0" }

[dev-dependencies]
bevy = "0.9"
rstest = "0.16"

[workspace]
members = ["set-with-grab-macro"]
