[package]
name = "set-with-grab-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "1.0"
to-syn-error = "1.0"

[dev-dependencies]
rstest = "0.16"
assert-parse = "1.0"
